@@ -1,3 +1,8 @@
+2009-01-06 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/GSWindowDecorationView.m: No longer adjust the size of
+	the content view, when a toolbar is added, removed or resized.
+
 2009-01-06 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSTheme.m:
